fixed the issue of elements in the form not aligned between different browsers & OS

--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,7 @@
   --theme-color: #3b75cd;
 }
 .App {
-  font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-family: Arial, sans-serif;
   margin: 0 auto;
   padding: 0;
   width: 600px;
@@ -27,27 +26,22 @@ form {
 
 form > input {
   display: inline-block;
+  vertical-align: top;
   position: relative;
-  -webkit-top: 2px; /* for Chrome on Mojave */
-  -moz-top: 2px; /* for Firefox on Mojave */
-  top: 0px; /* All other browsers and OS */
   width: 33%;
   height: 36px;
-  line-height: 24px;
   padding-left: 10px;
   font-size: 16px;
   border: none;
   border-top-left-radius: 7px;
   border-bottom-left-radius: 7px;
-  font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 button[type=submit] {
   display: inline-block;
+  vertical-align: top;
   position: relative;
-  -webkit-top: 3.5px;  /* for Chrome on Mojave */
-  -moz-top: 2px; /* for Firefox on Mojave */
-  top: 3.5px;
   background-color: #c3d5f0;
   border: none;
   height: 38px;
@@ -58,14 +52,13 @@ button[type=submit] {
 
 .Dropdown {
   display: inline-block;
+  vertical-align: top;
   position: relative;
-  top: 0px;
   border: none;
   width: 33%;
   border-radius: 0;
   color: black;
   background-color: white;
-  font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .Dropdown > div {
@@ -122,7 +115,6 @@ table {
   -webkit-border-vertical-spacing: 0px;
   border: 1px solid;
   border-width: 0 0 1px 1px;
-  /* display: block; */
   table-layout: auto;
   width: 518px;
   empty-cells: show;
